# jam

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  COPYRIGHT.md  Cargo.toml  README.md  linux-clang-libc++.cmake  linux-gcc-libstdc++.cmake
docs/: DESIGN-SLURM-INTEGRATION.md
src/: CMakeLists.txt  actions.hpp  app.rs  data.hpp  jam.hpp  main.cpp  main.rs  process.hpp  tui.hpp
src/cgroup/: mod.rs  parser.rs  types.rs
src/process/: mod.rs  parser.rs  types.rs
src/slurm/: collector.rs  coordinator.rs  mod.rs  slurm.rs  types.rs
src/ui/: mod.rs  tree.rs
tests/: CMakeLists.txt  dummy.cpp
tests/slurm-cluster/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  test-jam.sh
tests/slurm-cluster/etc/slurm/: cgroup.conf  slurm.conf
tests/slurm-cluster/scripts/: entrypoint.sh
