[package]
name = "jam"
version = "0.1.0"
edition = "2021"
description = "Job Analysis and Monitoring - cgroupv2 and process tree visualizer"
authors = ["dklein"]
license = "LGPL-3.0-or-later"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "fs", "macros", "process", "io-util", "time", "signal"] }
futures = "0.3"
hostname = "0.4"
ctrlc = "3.4"

[profile.release]
lto = true
strip = true
